# motoman

./: .gitignore  .travis.yml  README.md  stack.xml
dx100/: CMakeLists.txt  manifest.xml  package.xml  simple_joint_stream_interface.launch  visualize_live_robot.launch
dx100/cfg/: sia10d_mesh.xacro  sia10d_mesh.xml
dx100/motoplus/: README.txt  robot_sync_script_generator.xlsm
dx100/src/: interface.cpp  joint_relay_handler.cpp  joint_trajectory_action.cpp  joint_trajectory_downloader.cpp  joint_trajectory_handler.cpp  motion_download_interface.cpp  motion_interface.cpp  p_var_q.cpp  robot_state.cpp  ros_conversion.cpp  traj_pub.cpp  trajectory_job.cpp  utils.cpp
dx100/test/: utest.cpp
fs100/: CMakeLists.txt  manifest.xml
fs100/Inform/: INIT_ROS.JBI
fs100/MotoPlus/: Controller.c  Controller.h  CtrlGroup.c  CtrlGroup.h  MPRosFS100.fsProj  MotionServer.c  MotionServer.h  SimpleMessage.c  SimpleMessage.h  StateServer.c  mpMain.c
fs100/launch/: robot_interface.launch
fs100/src/: fs100_joint_streaming_node.cpp  fs100_joint_trajectory_streamer.cpp  fs100_robot_state_node.cpp  joint_feedback_relay_handler.cpp  joint_relay_handler.cpp  robot_state_node.cpp
kinematics_base_test/: CMakeLists.txt  package.xml
kinematics_base_test/launch/: test_ikfast_plugin.launch  test_ikfast_w_redundancy_plugin.launch  test_kdl_plugin.launch  test_kinematics_plugin.launch
kinematics_base_test/src/: test_kinematics_plugin.cpp
motoman/: CHANGELOG.rst  CMakeLists.txt  package.xml
motoman_csda10f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_csda10f_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_csda10f.srdf  ompl_planning.yaml
motoman_csda10f_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  motoman_csda10f_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motoman_csda10f_support/: CMakeLists.txt  package.xml
motoman_csda10f_support/config/: csda10f_motion_interface.yaml  joint_names_csda10f.yaml
motoman_csda10f_support/launch/: load_csda10f.launch  robot_interface_streaming_csda10f.launch  robot_state_visualize_csda10f.launch  test_csda10f.launch
motoman_csda10f_support/urdf/: arm_macro.xacro  common_torso_macro.xacro  csda10f.xacro  csda10f_macro.xacro
motoman_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
motoman_driver/Inform/: .gitattributes  INIT_ROS.JBI
motoman_driver/MotoPlus/: CMakeLists.txt  CMakeLists_with_vs_support.txt  CMakeLists_without_vs_support.txt  CPPLINT.cfg  Controller.c  Controller.h  CtrlGroup.c  CtrlGroup.h  IoServer.c  IoServer.h  MotionServer.c  MotionServer.h  MotoROS.h  MotoRosDX200.dnProj  MpRosAllControllers.VC.db  MpRosAllControllers.sln  MpRosAllControllers.vcxproj  MpRosAllControllers.vcxproj.filters  MpRosDx100.mpProj  MpRosDx100Ftp.mpProj  MpRosFS100.fsProj  ParameterExtraction.dnLib  ParameterExtraction.fsLib  ParameterExtraction.h  ParameterExtraction.mpLib  ParameterExtraction.yrcLib  ParameterExtraction.yrcmLib  ParameterExtraction.yrcmlib  ParameterExtraction_DX100.mpLib  ParameterExtraction_DX100_FTP.mpLib  ParameterExtraction_DX200.dnLib  ParameterExtraction_FS100.fsLib  ParameterTypes.h  ReadMe.txt  RosSetupValidation.dnLib  RosSetupValidation.fsLib  RosSetupValidation.h  RosSetupValidation.mpLib  RosSetupValidation.yrcLib  RosSetupValidation.yrcmlib  (+11 more)
motoman_driver/launch/: io_relay.launch  motion_streaming_interface.launch  robot_interface.launch  robot_interface_dx100.launch  robot_interface_fs100.launch  robot_interface_streaming.launch  robot_interface_streaming_dx100.launch  robot_interface_streaming_dx200.launch  robot_interface_streaming_fs100.launch  robot_interface_streaming_yrc1000.launch  robot_multigroup_interface_streaming_dx100.launch  robot_multigroup_interface_streaming_dx200.launch  robot_multigroup_interface_streaming_fs100.launch  robot_multigroup_interface_streaming_yrc1000.launch  robot_state.launch  robot_state_dx100.launch  robot_state_dx200.launch  robot_state_fs100.launch  robot_state_yrc1000.launch
motoman_driver/msg/: MotomanErrors.msg  MotomanStatus.msg
motoman_driver/scripts/: dynamic_trajectory_converter.py
motoman_driver/src/: io_ctrl.cpp  io_relay.cpp  io_relay_node.cpp  joint_streaming_node.cpp  joint_trajectory_action_node.cpp  joint_trajectory_streamer.cpp  motion_ctrl.cpp  move_to_joint.py  robot_state_node.cpp
motoman_driver/tests/: roslaunch_test_io_relay.xml
motoman_es_support/: CMakeLists.txt  package.xml
motoman_es_support/config/: joint_names_es165rdii.yaml  joint_velocities_dx100.yaml  joint_velocities_dx200.yaml  joint_velocities_nx100.yaml
motoman_es_support/launch/: load_es165.launch  load_es165rdii.launch  load_es200_120.launch  test_es165.launch  (+12 more)
motoman_gp180_support/: CMakeLists.txt  package.xml
motoman_gp200r_support/: CMakeLists.txt  package.xml
motoman_gp215-250_support/: CMakeLists.txt  package.xml
motoman_gp225_support/: CMakeLists.txt  package.xml
motoman_gp35l_support/: CMakeLists.txt  package.xml
motoman_gp88_support/: CMakeLists.txt  package.xml
motoman_hc10_ikfast_plugin/: CMakeLists.txt  motoman_hc10_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
motoman_hc10_support/: CMakeLists.txt  package.xml
motoman_ma1400_support/: CMakeLists.txt  package.xml
motoman_ma1440_d500_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_ma1440_d500_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
motoman_ma1440_mh185_rotisserie_support/: CMakeLists.txt  package.xml
motoman_ma1440_mh185_vertical_support/: CMakeLists.txt  package.xml
motoman_ma1440_support/: CMakeLists.txt  package.xml
motoman_ma2010_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+2128 files in other folders)
