<package>
  <name>dx100</name>
  <version>1.0.0</version>
  <description>The dx100 package includes nodes for interfacing with a motoman
	DX100 industrial controller.</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards (Southwest Research Institute)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_core</url>
  <author email="sedwards@swri.org">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>industrial_utils</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>simple_message</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>industrial_robot_client</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include/"/>
  </export>
</package>
