<?xml version="1.0"?>
<package>
  <name>kinematics_base_test</name>
  <version>0.0.0</version>
  <description>The kinematics_base_test package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>TODO</license>

  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ikfast</run_depend>
  <run_depend>pr2_moveit_config</run_depend>
  <run_depend>pr2_moveit_plugins</run_depend>

  <export>
  </export>
</package>
