<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman</name>
  <version>0.3.5</version>
  <description>ROS-Industrial support for Yaskawa Motoman manipulators (metapackage).</description>
  <author>Shaun Edwards</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_gp12_support</exec_depend>
  <exec_depend>motoman_gp7_support</exec_depend>
  <exec_depend>motoman_gp8_support</exec_depend>
  <exec_depend>motoman_mh12_support</exec_depend>
  <exec_depend>motoman_mh50_support</exec_depend>
  <exec_depend>motoman_mh5_support</exec_depend>
  <exec_depend>motoman_motomini_support</exec_depend>
  <exec_depend>motoman_msgs</exec_depend>
  <exec_depend>motoman_sda10f_moveit_config</exec_depend>
  <exec_depend>motoman_sda10f_support</exec_depend>
  <exec_depend>motoman_sia10d_support</exec_depend>
  <exec_depend>motoman_sia10f_support</exec_depend>
  <exec_depend>motoman_sia20d_moveit_config</exec_depend>
  <exec_depend>motoman_sia20d_support</exec_depend>
  <exec_depend>motoman_sia5d_support</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
