<?xml version="1.0"?>
<package format="2">
 <name>motoman_csda10f_support</name>
 <version>0.3.5</version>
 <description>
  <p>
      ROS Industrial support for the Motoman csda10f (and variants).
    </p>
  <p>
      This package contains configuration data, 3D models and launch files
      for Motoman csda10f manipulators.
    </p>
  <p>
   <b>Specifications</b>
  </p>
  <ul>
   <li>csda10f - Default</li>
  </ul>
  <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online.
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
  <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
 </description>
 <author email="amrith1007@gmail.com">Amrith Ganesh</author>
 <maintainer email="daniels.ordonez@gmail.com">Amrith Ganesh</maintainer>
 <maintainer email="amrith1007@gmail.com">Amrith Ganesh</maintainer>

 <license>BSD</license>

 <url type="website">http://ros.org/wiki/motoman_sda10f_support</url>
 <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
 <url type="repository">https://github.com/ros-industrial/motoman</url>
 
 <buildtool_depend>catkin</buildtool_depend>
 <test_depend>roslaunch</test_depend>
 <exec_depend>joint_state_publisher</exec_depend>
 <exec_depend>motoman_driver</exec_depend>
 <exec_depend>robot_state_publisher</exec_depend>
 <exec_depend>rviz</exec_depend>
 <exec_depend>xacro</exec_depend>

 <export>
  <architecture_independent/>
 </export>
</package>
