<?xml version="1.0"?>
<package format="2">
  <name>motoman_driver</name>
  <version>0.3.5</version>
  <description>
    This package provides nodes for interfacing with Motoman industrial robot controllers.
  </description>
  <author>Jeremy Zoss (Southwest Research Institute)</author>
  <maintainer email="jeremy.zoss@swri.org">Jeremy Zoss (Southwest Research Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_robot_client</depend>
  <depend>industrial_utils</depend>
  <depend>motoman_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>simple_message</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
</package>
